--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,15 +3,15 @@ environment:
   matrix:
     - PYTHON: "C:/Python27"
     - PYTHON: "C:/Python27-x64"
-    - PYTHON: "C:/Python33"
-    - PYTHON: "C:/Python33-x64"
-    - PYTHON: "C:/Python34"
-    - PYTHON: "C:/Python34-x64"
+    - PYTHON: "C:/Python36"
+    - PYTHON: "C:/Python36-x64"
+    - PYTHON: "C:/Python37"
+    - PYTHON: "C:/Python37-x64"
 init:
   - "ECHO %PYTHON%"
   - ps: "ls C:/Python*"
 install:
-  - ps: "(new-object net.webclient).DownloadFile('https://raw.github.com/pypa/pip/master/contrib/get-pip.py', 'C:/get-pip.py')"
+  - ps: "(new-object net.webclient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', 'C:/get-pip.py')"
   - "%PYTHON%/python.exe C:/get-pip.py"
   - "%PYTHON%/Scripts/pip.exe install -e ."
   - "%PYTHON%/Scripts/pip.exe install nose"
